k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: msc-de1-project
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
